keycloak/templates/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  host: keycloak.baloise.dev
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: keycloak-http
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
